# vktutorial

./: .gitignore  CMakeLists.txt  README.md
docs/: index.md  project_settings.md  project_settings.md.backup  vulkan-initialization.md
vkengine/: CMakeLists.txt
vkengine/include/: main.h  vk_engine.h  vk_initializers.h  vk_load_shader.h  vk_proxy_funcs.h  vk_types.h
vkengine/shaders/: compile.bat  shader.frag  shader.vert
vkengine/src/: main.cpp  vk_engine.cpp  vk_engine_create_command_buffers.cpp  vk_engine_create_command_pool.cpp  vk_engine_create_graphics_pipeline.cpp  vk_engine_create_image_views.cpp  vk_engine_create_instance.cpp  vk_engine_create_logical_device.cpp  vk_engine_create_renderpass.cpp  vk_engine_create_surface.cpp  vk_engine_create_swapchain.cpp  vk_engine_create_window.cpp  vk_engine_get_device_queues.cpp  vk_engine_physical_device_detection.cpp  vk_engine_queue_families_detection.cpp  vk_engine_setup_debug_messeger.cpp  vk_initializers.cpp  vk_load_shader.cpp  vk_proxy_funcs.cpp
